<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SkatDb</string>
    <string name="btnNeuesSpiel">Neues Spiel</string>
    <string name="btnSpielFortsetzen">Spiel fortsetzen</string>
    <string name="btnSpielLaden">Spiel laden</string>
    <string name="cbHandspiel">Hand</string>
    <string name="cbKontra">Kontra</string>
    <string name="cbOuvert">Ouvert</string>
    <string name="cbRe">Re</string>
    <string name="cbSchneiderAngesagt">Schneider</string>
    <string name="cbSchwarzAngesagt">Schwarz</string>
    <string name="cbSchwarzGespielt">Schwarz gespielt</string>
    <string name="col_datum">Datum</string>
    <string name="col_spieler">Spieler</string>
    <string name="edPunkteReHint">Punkte Re</string>
    <string name="editSkatrunde">Bearbeiten</string>
    <string name="empty_list_text" />
    <string name="menuAddAnsage">Ansage machen</string>
    <string name="menuAddSkatspiel">Spiel eintragen</string>
    <string name="menuDeleteLastRound">Letzte Runde löschen</string>
    <string name="menuDeleteRound">Löschen</string>
    <string name="menuExport">Exportieren</string>
    <string name="menuExportAll">Alles exportieren</string>
    <string name="menuSaveUpdate">Speichern</string>
    <string name="menuSpielStart">Starten</string>
    <string name="rbGewonnen">Gewonnen</string>
    <string name="rbGrand">Grand</string>
    <string name="rbHerz">Herz</string>
    <string name="rbKaro">Karo</string>
    <string name="rbKreuz">Kreuz</string>
    <string name="rbNull">Null</string>
    <string name="rbPik">Pik</string>
    <string name="rbRamsch">Ramsch</string>
    <string name="rbVerloren">Verloren</string>
    <string name="title_activity_add_skatspiel">Spiel eintragen</string>
    <string name="title_activity_add_skatspiel_null">Nullspiel eintragen</string>
    <string name="title_activity_inspect_skatrunde">Skatrunde betrachten</string>
    <string name="title_activity_load_game">Spiel laden</string>
    <string name="title_activity_main_menu">Hauptmenü</string>
    <string name="title_activity_neues_spiel">Neues Spiel</string>
    <string name="tvAnsagen">Ansagen</string>
    <string name="tvAufspiel">Aufspiel:</string>
    <string name="tvISolist">Solist:</string>
    <string name="tvJungfrauAngesagt">Jungfrau angesagt</string>
    <string name="tvJungfrauenAngesagt">Jungfrau angesagt</string>
    <string name="tvReizwert">Reizwert</string>
    <string name="tvSolist">Solist</string>
    <string name="tvSolistAuswertung">Solist:</string>
    <string name="tvSpiel">Spiel</string>
    <string name="tvSpielernamen">Spieler</string>
    <string name="tvSpielerzahl">3 Spieler</string>
    <string name="title_activity_add_ansage">Ansage machen</string>
    <string name="rbMit">Mit</string>
    <string name="rbOhne">Ohne</string>
    <string name="rbBuben1">1</string>
    <string name="rbBuben2">2</string>
    <string name="rbBuben3">3</string>
    <string name="rbBuben4">4</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_x1_spiel">Spiel</string>
    <string name="title_activity_x2_solist">Solist</string>
    <string name="title_activity_x3_ansagen">Ansagen</string>
    <string name="title_activity_x4_auswertung">Auswertung: Buben</string>
    <string name="title_activity_x5_auswertung_ausgang">Auswertung: Ausgang</string>
    <string name="title_activity_x6_auswertung_schneider">Auswertung: Schneider</string>
    <string name="title_activity_auswertung">Auswertung: Übersicht</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_x7_auswertung">Auswertung</string>
    <string name="menu_ok">OK</string>


    <string name="title_activity_x71_ramsch_ausgang">Ausgang</string>
    <string name="title_activity_x72_ramsch_verlierer_gewinner">Titel</string>
    <string name="title_activity_x73_ramsch_multiplikator">Multiplikator</string>
    <string name="title_activity_x74_ramsch_auswertung">Auswertung Ramsch</string>



</resources>
