<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llBuben"
        android:weightSum="4"
        android:paddingTop="20sp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbKreuz"
            android:id="@+id/cbKreuz"
            android:layout_weight="1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbPik"
            android:id="@+id/cbPik"
            android:layout_weight="1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbHerz"
            android:id="@+id/cbHerz"
            android:layout_weight="1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbKaro"
            android:id="@+id/cbKaro"
            android:layout_weight="1" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/edPunkteRe"
        android:layout_gravity="center_horizontal"
        android:hint="@string/edPunkteReHint"
        android:paddingTop="20sp"
        android:enabled="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbSchwarzGespielt"
        android:id="@+id/cbSchwarzGespielt"
        android:visibility="visible"
        android:enabled="true"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSpielAuswertung"
        android:paddingTop="20sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llBuben2"
        android:weightSum="2">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:id="@+id/rgBubenMitOhne">

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/rbMit"
                android:id="@+id/radioButton"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/rbOhne"
                android:id="@+id/radioButton2"
                android:layout_weight="1" />

        </RadioGroup>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/rgBubenZahl"
            android:weightSum="4"
            android:visibility="invisible">

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbBuben1"
                android:id="@+id/radioButton3"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbBuben2"
                android:id="@+id/radioButton4"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbBuben3"
                android:id="@+id/radioButton5"
                android:layout_weight="1" />

            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/rbBuben4"
                android:id="@+id/radioButton6"
                android:layout_weight="1" />
        </RadioGroup>

    </LinearLayout>

</LinearLayout>
